# lattice-summaries-lattices-legacy

./: .gitignore  .gitmodules  5bend_20p_LongBend-TG-TGRB.lte  5bend_20p_reference.lte  Hwang_4sexts.lte  Hwang_5sexts.lte  README.md  dodo.py  hwang_4sexts.lte  hwang_5sexts.lte  info.toml  kuske_5bend_20p_longbend-tg-tgrb.lte  kuske_5bend_20p_reference.json  kuske_5bend_20p_reference.lte  kuske_5bend_20p_reference.madx  pyproject.toml
hwang/: bessy3_4sexts_v_1.json  bessy3_4sexts_v_1.lte  bessy3_4sexts_v_1.madx  bessy3_5sexts_v_1.json  bessy3_5sexts_v_1.lte  bessy3_5sexts_v_1.madx
hzb/: bessy2_design-1996_v_1.lte  bessy2_design-1996_v_1.madx  bessy2_stduser-2019-05-07-v_1.lte  bessy2_stduser-2019-05-07-v_1.madx
kuske/: bessy3_5ba-20p_v_long-bend-tgrb.json  bessy3_5ba-20p_v_long-bend-tgrb.lte  bessy3_5ba-20p_v_long-bend-tgrb.madx  bessy3_5ba-20p_v_reference.json  bessy3_5ba-20p_v_reference.lte  bessy3_5ba-20p_v_reference.madx
lattices/kuske/: bessy3_5ba-20p_v_long-bend-tgrb.lte
originals/andreas/: bessy2_stduser-2019-05-07-v_1.json
originals/bessy3/: bessy3_no-tg-in-unit-cell_v_notg-tgrb-b60-6bend-6sx.lte
originals/goslawski/: mls2_scaled-from-bessy2_v_wp-x9211-y3153.lte
originals/hwang/: bessy3_4sexts_v_1.lte  bessy3_5sexts_v_1.lte
originals/hzb/: bessy2_design-1996_v_1.json
originals/kuske/: bessy3_5ba-20p_v_reference.lte
