[tool.poetry]
name = "lattice-summaries-lattices"
version = "0.1.0"
description = ""
authors = ["Felix Andreas <felix.andreas95@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# LatticeJSON = "^0.1.4"
LatticeJSON = { path = "../../latticejson/", develop = true }
tomlkit = "^0.7.0"
doit = "^0.33.1"

[tool.poetry.dev-dependencies]
black = { version = "^20.8b1", allow-prereleases = true }
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
